Fix project section button wrapping issue

--- a/css/index.css
+++ b/css/index.css
@@ -520,9 +520,12 @@ section#projects .view-more:active {
   section#hero .hero-info h2 {
     font-size: 3rem;
   }
+  section#projects .projects .project a:link,
+  section#projects .projects .project a:visited {
+    font-size: 1.1rem;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 403px) {
   section#hero .hero-info h2 {
     font-size: 2rem;
   }
@@ -553,6 +556,12 @@ section#projects .view-more:active {
 
   section#projects {
     width: 100%;
+  }
+
+  section#projects .projects .project a:link,
+  section#projects .projects .project a:visited {
+    font-size: 1rem;
+    padding: 1rem 0;
   }
 }
 
@@ -636,7 +645,4 @@ section#projects .view-more:active {
   header .menu-overlay ul.mobile-navlist li a:visited {
     font-size: 2.5rem;
   }
-}
-
-@media only screen and (max-width: 800px) and (orientation: landscape) {
 }
